--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 						<h2>p.s. $Bsig is a fun experiment on the BRC20 fungible token standard developed by domodata. $Bsig has no monetary value and is not intended for any speculation.</h2>
 
+						
+						<a href="https://twitter.com/BitSignal_BRC20?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @BitSignal_BRC20</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 					</header>
 
