--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
 						<!----
 
 						-->
-
 						<nav>
-							<ul>
-								<li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/BitSignal_BRC20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a target="_blank" rel="noopener noreferrer" href="https://unisat.io/brc20/bsig" class="icon brands fa-dribbble"><span class="label">Web</span></a></li>
-							</ul>
+							<ul><h2>BitSignal dashboard</h2><li><a target="_blank" rel="noopener noreferrer" href="https://app.alphaday.com/b/461abbea391e938f482fbf41e24f13b5/" class="icon brands fa-dribbble"><span class="label">Web</span></a></li></ul>
+							<ul><h2>Mint page</h2><li><a target="_blank" rel="noopener noreferrer" href="https://unisat.io/brc20/bsig" class="icon brands fa-dribbble"><span class="label">Web</span></a></li></ul>
+							<ul><h2>Twitter</h2><li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/BitSignal_BRC20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li></ul>
 						</nav>
 
 						<h2>p.s. $Bsig is a fun experiment on the BRC20 fungible token standard developed by domodata. $Bsig has no monetary value and is not intended for any speculation.</h2>
