--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						-->
 						<nav>
 							<ul><h2>BitSignal dashboard</h2><li><a target="_blank" rel="noopener noreferrer" href="https://app.alphaday.com/b/461abbea391e938f482fbf41e24f13b5/" class="icon brands fa-blog"><span class="label">Web</span></a></li></ul>
-							<ul><h2>BitSignal virtual tour</h2><li><a target="_blank" rel="noopener noreferrer" href="https://bitsignal.pro/hall-of-bitsignal" class="icon brands fa-blog"><span class="label">Web</span></a></li></ul>
+							<ul><h2>BitSignal virtual tour</h2><li><a target="_blank" rel="noopener noreferrer" href="https://bitsignal.pro/hallOfBitsignal" class="icon brands fa-blog"><span class="label">Web</span></a></li></ul>
 							<ul><h2>Mint page</h2><li><a target="_blank" rel="noopener noreferrer" href="https://unisat.io/brc20/bsig" class="icon brands fa-blog"><span class="label">Web</span></a></li></ul>
 							<ul><h2>Twitter</h2><li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/BitSignal_BRC20" class="icon brands fa-blog"><span class="label">Twitter</span></a></li></ul>
 						</nav>
